[package]
name = "cylonn"
version = "0.0.1"
authors = [
    "Alexandre Gagnon <alxgnon@gmail.com>",
    "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>",
]

[[bin]]
name = "cylonnd"
path = "src/main.rs"

[dependencies]
regex = "0.1.19"
regex_macros = "0.1.12"
rustc-serialize = "0.3.3"
uuid = "0.1.11"
